--- a/css/admin-bar.css
+++ b/css/admin-bar.css
@@ -1,1 +1,9 @@
-li.green,li.green:focus,li.green:hover a{background-color:green!important; color:white!important}li.red,li.red:focus,li.red:hover a{background-color:red!important; color:white!important}
+li.green, li.green:focus, li.green:hover a {
+    background-color: green !important;
+    color: white !important
+}
+
+li.red, li.red:focus, li.red:hover a {
+    background-color: red !important;
+    color: white !important
+}
